Complete data for new portfolio page

--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -1,27 +1,116 @@
----
-recent:
-  errands:
-    name: 'Errands On The Way' 
-    url: 'errandsontheway.com'
-    description: >
-      I joined three other Dev Bootcamp students for our final project, 
-      a mobile-first Rails application helping the user find places 
-      to fulfill her errands along a given route. I pair-programmed with 
-      each of my teammates Jason, Christine, and Ryan in a very satisfying 
-      week of test-driven development.
+--- 
+least_recent: ~
+less_recent:
+  zvents:
+    description: "My assignment: a problematic jQuery carousel (aren't they all?). I performed incredible CSS gymnastics to align a speech-bubble-like element <em>just so</em> cross-browser."
+    name: Zvents
+    role:
+      - jquery
+      - css
+  nexant:
+    description: "I devised rather straightforward HTML forms, and placed them into ICEFaces/JSF templates. Made me more appreciative of Rails."
+    name: "Nexant TrakSmart"
+    role:
+      - css
+    url: nexant.com/ESS/product_traksmart.aspx
+  smartleaf:
+    description: "I created interface elements for a remarkably abstruse application for some obscure form of investing you and I will probably never make. Really gained appreciation for what genius interface designers like Gino Lee can do with such difficult requirements."
+    name: Smartleaf
+    role:
+      - html5
+      - css
+      - jquery
+    url: tempdub.smartleaf.com/what-we-do/details
+  smartfm:
+    description: "Was given carte blanche to ignore all versions of Internet Explorer, and subequently went crazy with standard and vendor-prefixed CSS3 for a hip language-learning application with a demanding user base of Japanese teenagers."
+    name: Smart.fm
+    role:
+      - jquery
+      - css
+  limos:
+    description: "Enjoyed the back-and-forth of a small development team (four of us) and work organized sensibly by Agile-type user stories."
+    name: Limos.com
+    role:
+      - jquery
+      - css
+      - rails
+    url: limos.com
+  tripit:
+    description: "Joined two other developers and the two company founders at one big table; found this to be a really productive and satisfying setup. Lots of quick changes to Symfony (PHP) templates in CSS and YUI JavaScript modules."
+    name: TripIt
+    role:
+      - css
+      - javascript
+      - php
+    url: tripit.com
+recent: 
+  errands: 
+    description: "I joined three other Dev Bootcamp students for our final project,  a mobile-first Rails application helping the user find places  to fulfill her errands along a given route. I pair-programmed with  each of my teammates Jason, Christine, and Ryan in a very satisfying  week of test-driven development.\n"
+    name: "Errands On The Way"
+    role: 
+      - rails
+      - ruby
+      - css
+      - javascript
+      - rspec
+      - jasmine
+    url: errandsontheway.com
   ge: 
-    name: 'GE Global Research'
-    url: 'ge.geglobalresearch.com'
-    description: >
-      Wrangled an ornery herd of Grunt scripts, Bower packages, 
-      and Twitter Bootstrap forks into the 
-      <a href="http://www.creativebloq.com/netmag/using-bootstrap-complex-design-systems-7133781">Industrial Internet Design System (IIDS)</a>,
-      a framework of browser-side components for Java and .NET developers 
-      to use in their applications.
-  clorox:
-    name: 'The Clorox Company'
-    url: 'thecloroxcompany.com'
-    description: >
-      Sprinkled oxygen atoms on the corporate site for probably the best known brand of bleach on the planet. I contributed new markup and debugged 
-      CSS rules to an existing site served up by PHP.
+    description: "Wrangled an ornery herd of Grunt scripts, Bower packages,  and Twitter Bootstrap forks into the  <a href=\"http://www.creativebloq.com/netmag/using-bootstrap-complex-design-systems-7133781\">Industrial Internet Design System (IIDS)</a>, a framework of browser-side components for Java and .NET developers  to use in their applications.\n"
+    name: "GE Global Research"
+    role: 
+      - javascript
+      - html5
+      - css
+    url: ge.geglobalresearch.com
+  clorox: 
+    description: "Sprinkled oxygen atoms on the corporate site for probably the best known brand of bleach on the planet. I contributed new markup and debugged  CSS rules to an existing site served up by PHP.\n"
+    name: "The Clorox Company"
+    role: 
+      - html5
+      - css
+    url: thecloroxcompany.com
+  freshstep:
+    description: "Was handed a few debugging issues on a catchy, consumer-oriented site with lots of HTML5/CSS3/jQuery doodads. My bigger task: maintaining focus while proofreading Web copy about desirable properties in cat litter."
+    name: "Fresh Step"
+    role:
+      - javascript
+      - jquery
+      - css
+    url: freshstep.com
+  sungevity:
+    description: "Assigned maintenance on musty outsourced HTML. More exciting was my task of reworking it all into the newest version of the CakePHP framework. Best of all was experiencing Agile project management as it's really supposed to be practiced."
+    name: "Sungevity iQuote"
+    role:
+      - css
+      - php
+    url: www.sungevity.com/get-your-iquote/
+  spreecast:
+    description: "One of those rapid-fire, pre-beta startup development projects--worked with four other developers to solve the complex problem of delivering streaming video chat using Rails and Node.js. Decided to use Blueprint CSS, and everybody was glad."
+    name: Spreecast
+    role:
+      - jquery
+      - html5
+      - css
+    url: spreecast.com
+rip:
+  vox:
+    description: "Sigh. This was a great project: to separate markup and design so completely that a user could change her blog theme with the click of one button. We were clobbered by Facebook."
+    name: "Vox Blog Themes"
+    role:
+      - css
+      - html
+  cchs:
+    description: "Bilingual (English/Spanish) site for a nonprofit group in California's 11th Congressional district. I worked with yet another attractive design by <a href=\"//www.behance.net/rolfwilkinson\">Rolf Wilkinson</a>"
+    name: "Citizens for Community Health and Sustainability"
+    role:
+      - css
+      - html
+  zinkle:
+    description: "A search engine for children. Really! Designer <a href=\"//tinyporchlight.com\">Rachael Schafer</a> ditched stereotypical screaming primary colors and drew cartoon critters instead. It really was endearing. All the results kid-appropriate."
+    name: Zinkle
+    role:
+      - css
+      - php
+      - html
 
