--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -101,7 +101,7 @@ rip:
       - css
       - html
   cchs:
-    description: "Bilingual (English/Spanish) site for a nonprofit group in California's 11th Congressional district. I worked with yet another attractive design by <a href=\"//www.behance.net/rolfwilkinson\">Rolf Wilkinson</a>".
+    description: "Bilingual (English/Spanish) site for a nonprofit group in California's 11th Congressional district. I worked with yet another attractive design by <a href=\"//www.behance.net/rolfwilkinson\">Rolf Wilkinson</a>."
     name: "Citizens for Community Health and Sustainability"
     role:
       - css
