Revised copy on portfolio. Closes #22.

--- a/data/portfolio.yml
+++ b/data/portfolio.yml
@@ -45,13 +45,13 @@ less_recent:
     url: tripit.com
 recent:
   autonot:
-    description: "Irritated into action by HTML5's <code>autoplay</code> attribute, I built a Chrome browser extension to zap them from a web page."
+    description: "Irritated into action by HTML5's <code>autoplay</code> attribute on <code>video</code> elements, I built a Chrome browser extension to zap these videos from a web page."
     name: "Auto-not"
     role:
       - javascript
     url: https://github.com/mejarc/auto-not
   errands: 
-    description: "I joined three other Dev Bootcamp students for our final project,  a mobile-first Rails application helping the user find places  to fulfill her errands along a given route. I pair-programmed with  each of my teammates Jason, Christine, and Ryan in a very satisfying  week of test-driven development.\n"
+    description: "I joined three other Dev Bootcamp students for our final project,  a mobile-first Rails application helping the user find places  to fulfill her errands along a given route. I pair-programmed with  each of my teammates Jason, Christine, and Ryan in a very satisfying  week of test-driven development."
     name: "Errands On The Way"
     role: 
       - rails
